--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,5 +1,5 @@
-/* This settings are for debugging C++ code
- * in Visual Studio Code in Linux environment. */
+/* VS Code debug configurations for C++ and for running Python under gdb
+ * so you can step into pybind11 / native C++ code when importing from Python. */
 {
   "version": "0.2.0",
   "configurations": [
@@ -34,8 +34,23 @@
       "environment": [],
       "externalConsole": false,
       "MIMode": "gdb",
-      "preLaunchTask": "Build without Debug Active C++ File",
-      "noDebug": true
+  "preLaunchTask": "Build without Debug Active C++ File"
+    },
+    {
+      "name": "Debug C++ in Python (gdb)",
+      "type": "cppdbg",
+      "request": "launch",
+      "program": "/usr/bin/python3",
+      "args": ["${workspaceFolder}/test.py"],
+      "stopAtEntry": false,
+      "cwd": "${workspaceFolder}",
+      "environment": [],
+      "externalConsole": false,
+      "MIMode": "gdb",
+      "miDebuggerPath": "/usr/bin/gdb",
+      "setupCommands": [
+        { "description": "Enable pretty-printing", "text": "-enable-pretty-printing", "ignoreFailures": true }
+      ]
     }
   ]
 }
