Update launch.json to use the current file as an argument for Python debugging

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -41,7 +41,7 @@
       "type": "cppdbg",
       "request": "launch",
       "program": "/usr/bin/python3",
-      "args": ["${workspaceFolder}/test.py"],
+      "args": ["${file}"],
       "stopAtEntry": false,
       "cwd": "${workspaceFolder}",
       "environment": [],
