--- a/.github/workflows/push_docker_image.yml
+++ b/.github/workflows/push_docker_image.yml
@@ -2,7 +2,9 @@ name: Create and push docker image
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main
+      - feature/*
 
 jobs:
 
@@ -14,17 +16,18 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Log in to Docker Hub
+      - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: clone MCAP_repo_manager
         run: git clone https://github.com/Modeling-Coding-Automation-Project/MCAP_repo_manager.git
 
       - name: Build Docker image
-        run: docker build -t claudeashford/mcap_env:latest ./MCAP_repo_manager/docker/docker_image_creation
+        run: docker build -t ghcr.io/Modeling-Coding-Automation-Project/mcap_env:latest ./MCAP_repo_manager/docker/docker_image_creation
 
       - name: Push Docker image
-        run: docker push claudeashford/mcap_env:latest
+        run: docker push ghcr.io/Modeling-Coding-Automation-Project/mcap_env:latest
