--- a/.github/workflows/check_build_path.yml
+++ b/.github/workflows/check_build_path.yml
@@ -14,6 +14,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          submodules: true
 
       - name: Verify include paths from tasks.json
         env:
