--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,6 +4,29 @@
   "version": "0.2.0",
   "configurations": [
     {
+      "name": "Python Debugger",
+      "type": "debugpy",
+      "request": "launch",
+      "program": "${file}",
+      "console": "integratedTerminal",
+    },
+    {
+      "name": "Debug C++ in Python (gdb)",
+      "type": "cppdbg",
+      "request": "launch",
+      "program": "/opt/venv_py_MCAP/bin/python3",
+      "args": ["${file}"],
+      "stopAtEntry": false,
+      "cwd": "${workspaceFolder}",
+      "environment": [],
+      "externalConsole": false,
+      "MIMode": "gdb",
+      "miDebuggerPath": "/usr/bin/gdb",
+      "setupCommands": [
+        { "description": "Enable pretty-printing", "text": "-enable-pretty-printing", "ignoreFailures": true }
+      ]
+    },
+    {
       "name": "Debug Active C++ File",
       "type": "cppdbg",
       "request": "launch",
@@ -35,22 +58,6 @@
       "externalConsole": false,
       "MIMode": "gdb",
   "preLaunchTask": "Build without Debug Active C++ File"
-    },
-    {
-      "name": "Debug C++ in Python (gdb)",
-      "type": "cppdbg",
-      "request": "launch",
-      "program": "/opt/venv_py_MCAP/bin/python3",
-      "args": ["${file}"],
-      "stopAtEntry": false,
-      "cwd": "${workspaceFolder}",
-      "environment": [],
-      "externalConsole": false,
-      "MIMode": "gdb",
-      "miDebuggerPath": "/usr/bin/gdb",
-      "setupCommands": [
-        { "description": "Enable pretty-printing", "text": "-enable-pretty-printing", "ignoreFailures": true }
-      ]
     }
   ]
 }
